<resources>
    <string name="app_name">ММСД</string>
    <string name="action_settings">Настройки</string>
    <string name="title_activity_device_list">Обнаруженные устройства</string>
    <string name="title_activity_terminal">Терминал</string>
    <string name="title_activity_main">Регистры</string>
    <string name="navigation_drawer_open">Открыть боковое меню</string>
    <string name="navigation_drawer_close">Закрыть боковое меню</string>
    <string name="connectTip">Подключитесь к устройству, \n используя боковое меню</string>
    <string name="connectedTip">Подключение установлено</string>
    <string name="no_connection">Нет подключения\n &lt;- Используйте боковое меню</string>
    <string name="Measure">Провести измерение</string>
    <string name="Values">Значения</string>
    <string name="Config">Конфигурация</string>
    <string name="Calibration">Калибровки</string>
    <string name="Misc">Прочее</string>
    <string name="title_activity_login">Авторизация</string>
    <string name="auth_welcome">Добро пожаловать в ММСД!\n Пожалуйста, авторизуйтесь</string>
    <string name="sign_in">Войти</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_name">Имя пользователя</string>
    <string name="add_user">Добавить пользователя</string>
    <string name="del_user">Удалить пользователя</string>
    <string name="error_invalid_password">Неверный пароль</string>
    <string name="error_needed">Необходимо</string>
    <string name="error_same_user">Пользователь уже существует</string>
    <string name="enter_new_note">Enter new note</string>
    <string name="add">Add</string>
    <string name="click_to_remove">Click a note to remove it</string>
    <string name="register_number_ph">"["%1$d"] "</string>
    <string-array name="BKM1_3_titles">
        // аналоговые
        <item>Полный потенциал V</item>
        <item>Поляризационный потенциал V</item>
        <item>Кислотность pH </item>
        <item>Ток A</item>
        <item>Температура ℃</item>
        <item>Напряжение батареи V</item>
        <item>Напряжение резисторов V</item>
        <item>Напряжение питания V</item>
        // дискретные и время
        <item>Слово состояния</item>
        <item>Год</item>
        <item>Месяц</item>
        <item>День</item>
        <item>Час</item>
        <item>Минута</item>
        <item>Секунда</item>
        // резисторы
        <item>Сопротивление 1</item>
        <item>Сопротивление 2</item>
        <item>Сопротивление 3</item>
        <item>Сопротивление 5</item>
        <item>Сопротивление 4</item>
        <item>Сопротивление 6</item>
        <item>Сопротивление 7</item>
        <item>Сопротивление 8</item>
        <item>Сопротивление 9</item>
        <item>Сопротивление 10</item>
        <item>Сопротивление 11</item>
        <item>Сопротивление 12</item>
        // сетевые данные учёта
        <item>Адрес MODBUS</item>
        <item>Скорость RS-485</item>
        <item>ID</item>
        <item>Версия программы</item>
        // калибровки
        <item>Смещение полного потенциала</item>
        <item>Коэффициент полного потенциала</item>
        <item>Максимум полного потенциала</item>
        <item>Смещение поляризационного потенциала</item>
        <item>Коэффициент поляризационного потенциала</item>
        <item>Максимум поляризационного потенциала</item>
        <item>Смещение кислотности</item>
        <item>Коэффициент  кислотности</item>
        <item>Максимум кислотности</item>
        <item>Смещение тока</item>
        <item>Коэффициент тока</item>
        <item>Максимум тока</item>
        <item>Смещение сопротивлений</item>
        <item>Авария резистора есле значение больше</item>
        <item>авария резистора есле значение меньше</item>
        <item>Количество замеров за опрос</item>
        // Режимы работы
        <item>Наличие и тип устройства связи</item>
        <item>Период опроса (минуты)</item>
        <item>Время активности (секунды)</item>
        <item>Адрес системы сбора данных</item>
        <item>Адрес УСИКПСТ (0-нет)</item>
        <item>Начало смещения сбора данных</item>
        <item>Данные из датчика коррозии 1</item>
        <item>Данные из датчика коррозии 2</item>
        <item>Данные из датчика коррозии 3</item>
        <item>Данные из датчика коррозии 4</item>
        <item>Оператор +7ХХХХХХХХХХХ</item>
        <item>Телефон часть 1</item>
        <item>Телефон часть 2</item>
    </string-array>
    <string-array name="BKM1_units">
        // аналоговые
        <item>В</item>
        <item>В</item>
        <item>В</item>
        <item>А</item>
        <item>℃</item>
        <item>В</item>
        <item>В</item>
        <item>В</item>
        // дискретные и время
        <item> </item>
        <item>г</item>
        <item>мес</item>
        <item>д</item>
        <item>час</item>
        <item>мин</item>
        <item>сек</item>
        // резисторы
        <item>Ом</item>
        <item>Ом</item>
        <item>Ом</item>
        <item>Ом</item>
        <item>Ом</item>
        <item>Ом</item>
        <item>Ом</item>
        <item>Ом</item>
        <item>Ом</item>
        <item>Ом</item>
        <item>Ом</item>
        <item>Ом</item>
        // сетевые данные учёта
        <item> </item>
        <item>кбод/сек</item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
    </string-array>
</resources>